// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`optionsMenu expanded 1`] = `
<Component
  id="expanded"
  isOpen={true}
  menuItems={
    Array [
      <Unknown>
        <Unknown>
          Name
        </Unknown>
        <Unknown>
          Date
        </Unknown>
        <Unknown
          isDisabled={true}
        >
          Disabled
        </Unknown>
        <Unknown>
          Size
        </Unknown>
      </Unknown>,
      <Unknown />,
      <Unknown>
        <Unknown>
          Ascending
        </Unknown>
        <Unknown>
          Descending
        </Unknown>
      </Unknown>,
    ]
  }
  toggle={
    <Unknown>
      Options Menu
    </Unknown>
  }
>
  <div
    className="pf-c-options-menu pf-m-expanded"
    id="expanded"
  >
    <Component
      isOpen={true}
      isPlain={false}
      key=".0"
      parentId="expanded"
    >
      <button
        aria-expanded={true}
        aria-haspopup="listbox"
        aria-label="Options menu"
        className="pf-c-options-menu__toggle"
        id="expanded-toggle"
        onClick={[Function]}
      >
        <span
          className="pf-c-options-menu__toggle-text"
        />
        <CaretDownIcon
          aria-hidden={true}
          className="pf-c-options-menu__toggle-icon"
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
          title={null}
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            className="pf-c-options-menu__toggle-icon"
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 320 512"
            width="1em"
          >
            <path
              d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
              transform=""
            />
          </svg>
        </CaretDownIcon>
      </button>
    </Component>
    <ul
      aria-labelledby="expanded-toggle"
      className="pf-c-options-menu__menu"
    >
      <Component
        key="first group"
      >
        <li>
          <ul
            aria-label=""
            className=""
          >
            <Component
              key="name"
            >
              <li>
                <button
                  aria-disabled={false}
                  aria-selected={false}
                  className="pf-c-options-menu__menu-item"
                  id=""
                  onClick={[Function]}
                  onKeyDown={[Function]}
                >
                  Name
                  <i
                    aria-hidden={true}
                    className="pf-c-options-menu__menu-item-icon"
                    hidden={true}
                  >
                    <CheckIcon
                      color="currentColor"
                      noVerticalAlign={false}
                      size="sm"
                      title={null}
                    >
                      <svg
                        aria-hidden={true}
                        aria-labelledby={null}
                        fill="currentColor"
                        height="1em"
                        role="img"
                        style={
                          Object {
                            "verticalAlign": "-0.125em",
                          }
                        }
                        viewBox="0 0 512 512"
                        width="1em"
                      >
                        <path
                          d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
                          transform=""
                        />
                      </svg>
                    </CheckIcon>
                  </i>
                </button>
              </li>
            </Component>
            <Component
              key="date"
            >
              <li>
                <button
                  aria-disabled={false}
                  aria-selected={false}
                  className="pf-c-options-menu__menu-item"
                  id=""
                  onClick={[Function]}
                  onKeyDown={[Function]}
                >
                  Date
                  <i
                    aria-hidden={true}
                    className="pf-c-options-menu__menu-item-icon"
                    hidden={true}
                  >
                    <CheckIcon
                      color="currentColor"
                      noVerticalAlign={false}
                      size="sm"
                      title={null}
                    >
                      <svg
                        aria-hidden={true}
                        aria-labelledby={null}
                        fill="currentColor"
                        height="1em"
                        role="img"
                        style={
                          Object {
                            "verticalAlign": "-0.125em",
                          }
                        }
                        viewBox="0 0 512 512"
                        width="1em"
                      >
                        <path
                          d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
                          transform=""
                        />
                      </svg>
                    </CheckIcon>
                  </i>
                </button>
              </li>
            </Component>
            <Component
              isDisabled={true}
              key="disabled"
            >
              <li>
                <button
                  aria-disabled={true}
                  aria-selected={false}
                  className="pf-c-options-menu__menu-item pf-m-disabled"
                  id=""
                  onClick={[Function]}
                  onKeyDown={[Function]}
                >
                  Disabled
                  <i
                    aria-hidden={true}
                    className="pf-c-options-menu__menu-item-icon"
                    hidden={true}
                  >
                    <CheckIcon
                      color="currentColor"
                      noVerticalAlign={false}
                      size="sm"
                      title={null}
                    >
                      <svg
                        aria-hidden={true}
                        aria-labelledby={null}
                        fill="currentColor"
                        height="1em"
                        role="img"
                        style={
                          Object {
                            "verticalAlign": "-0.125em",
                          }
                        }
                        viewBox="0 0 512 512"
                        width="1em"
                      >
                        <path
                          d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
                          transform=""
                        />
                      </svg>
                    </CheckIcon>
                  </i>
                </button>
              </li>
            </Component>
            <Component
              key="size"
            >
              <li>
                <button
                  aria-disabled={false}
                  aria-selected={false}
                  className="pf-c-options-menu__menu-item"
                  id=""
                  onClick={[Function]}
                  onKeyDown={[Function]}
                >
                  Size
                  <i
                    aria-hidden={true}
                    className="pf-c-options-menu__menu-item-icon"
                    hidden={true}
                  >
                    <CheckIcon
                      color="currentColor"
                      noVerticalAlign={false}
                      size="sm"
                      title={null}
                    >
                      <svg
                        aria-hidden={true}
                        aria-labelledby={null}
                        fill="currentColor"
                        height="1em"
                        role="img"
                        style={
                          Object {
                            "verticalAlign": "-0.125em",
                          }
                        }
                        viewBox="0 0 512 512"
                        width="1em"
                      >
                        <path
                          d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
                          transform=""
                        />
                      </svg>
                    </CheckIcon>
                  </i>
                </button>
              </li>
            </Component>
          </ul>
        </li>
      </Component>
      <Component
        key="separator"
      >
        <li
          className="pf-c-options-menu__separator"
          role="separator"
        />
      </Component>
      <Component
        key="second group"
      >
        <li>
          <ul
            aria-label=""
            className=""
          >
            <Component
              key="ascending"
            >
              <li>
                <button
                  aria-disabled={false}
                  aria-selected={false}
                  className="pf-c-options-menu__menu-item"
                  id=""
                  onClick={[Function]}
                  onKeyDown={[Function]}
                >
                  Ascending
                  <i
                    aria-hidden={true}
                    className="pf-c-options-menu__menu-item-icon"
                    hidden={true}
                  >
                    <CheckIcon
                      color="currentColor"
                      noVerticalAlign={false}
                      size="sm"
                      title={null}
                    >
                      <svg
                        aria-hidden={true}
                        aria-labelledby={null}
                        fill="currentColor"
                        height="1em"
                        role="img"
                        style={
                          Object {
                            "verticalAlign": "-0.125em",
                          }
                        }
                        viewBox="0 0 512 512"
                        width="1em"
                      >
                        <path
                          d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
                          transform=""
                        />
                      </svg>
                    </CheckIcon>
                  </i>
                </button>
              </li>
            </Component>
            <Component
              key="descending"
            >
              <li>
                <button
                  aria-disabled={false}
                  aria-selected={false}
                  className="pf-c-options-menu__menu-item"
                  id=""
                  onClick={[Function]}
                  onKeyDown={[Function]}
                >
                  Descending
                  <i
                    aria-hidden={true}
                    className="pf-c-options-menu__menu-item-icon"
                    hidden={true}
                  >
                    <CheckIcon
                      color="currentColor"
                      noVerticalAlign={false}
                      size="sm"
                      title={null}
                    >
                      <svg
                        aria-hidden={true}
                        aria-labelledby={null}
                        fill="currentColor"
                        height="1em"
                        role="img"
                        style={
                          Object {
                            "verticalAlign": "-0.125em",
                          }
                        }
                        viewBox="0 0 512 512"
                        width="1em"
                      >
                        <path
                          d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
                          transform=""
                        />
                      </svg>
                    </CheckIcon>
                  </i>
                </button>
              </li>
            </Component>
          </ul>
        </li>
      </Component>
    </ul>
  </div>
</Component>
`;

exports[`optionsMenu isDisabled 1`] = `
<Component
  id="disabled"
  menuItems={
    Array [
      <Unknown>
        <Unknown>
          Name
        </Unknown>
        <Unknown>
          Date
        </Unknown>
        <Unknown
          isDisabled={true}
        >
          Disabled
        </Unknown>
        <Unknown>
          Size
        </Unknown>
      </Unknown>,
      <Unknown />,
      <Unknown>
        <Unknown>
          Ascending
        </Unknown>
        <Unknown>
          Descending
        </Unknown>
      </Unknown>,
    ]
  }
  toggle={
    <Unknown
      isDisabled={true}
    >
      Options Menu
    </Unknown>
  }
>
  <div
    className="pf-c-options-menu"
    id="disabled"
  >
    <Component
      isDisabled={true}
      isOpen={false}
      isPlain={false}
      key=".0"
      parentId="disabled"
    >
      <button
        aria-expanded={false}
        aria-haspopup="listbox"
        aria-label="Options menu"
        className="pf-c-options-menu__toggle pf-m-disabled"
        id="disabled-toggle"
        onClick={[Function]}
      >
        <span
          className="pf-c-options-menu__toggle-text"
        />
        <CaretDownIcon
          aria-hidden={true}
          className="pf-c-options-menu__toggle-icon"
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
          title={null}
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            className="pf-c-options-menu__toggle-icon"
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 320 512"
            width="1em"
          >
            <path
              d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
              transform=""
            />
          </svg>
        </CaretDownIcon>
      </button>
    </Component>
  </div>
</Component>
`;

exports[`optionsMenu open up 1`] = `
<Component
  direction="up"
  id="openUp"
  menuItems={
    Array [
      <Unknown>
        <Unknown>
          Name
        </Unknown>
        <Unknown>
          Date
        </Unknown>
        <Unknown
          isDisabled={true}
        >
          Disabled
        </Unknown>
        <Unknown>
          Size
        </Unknown>
      </Unknown>,
      <Unknown />,
      <Unknown>
        <Unknown>
          Ascending
        </Unknown>
        <Unknown>
          Descending
        </Unknown>
      </Unknown>,
    ]
  }
  toggle={
    <Unknown>
      Options Menu
    </Unknown>
  }
>
  <div
    className="pf-c-options-menu pf-m-top"
    id="openUp"
  >
    <Component
      isOpen={false}
      isPlain={false}
      key=".0"
      parentId="openUp"
    >
      <button
        aria-expanded={false}
        aria-haspopup="listbox"
        aria-label="Options menu"
        className="pf-c-options-menu__toggle"
        id="openUp-toggle"
        onClick={[Function]}
      >
        <span
          className="pf-c-options-menu__toggle-text"
        />
        <CaretDownIcon
          aria-hidden={true}
          className="pf-c-options-menu__toggle-icon"
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
          title={null}
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            className="pf-c-options-menu__toggle-icon"
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 320 512"
            width="1em"
          >
            <path
              d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
              transform=""
            />
          </svg>
        </CaretDownIcon>
      </button>
    </Component>
  </div>
</Component>
`;

exports[`optionsMenu plain 1`] = `
<Component
  id="plain"
  isPlain={true}
  menuItems={
    Array [
      <Unknown>
        <Unknown>
          Name
        </Unknown>
        <Unknown>
          Date
        </Unknown>
        <Unknown
          isDisabled={true}
        >
          Disabled
        </Unknown>
        <Unknown>
          Size
        </Unknown>
      </Unknown>,
      <Unknown />,
      <Unknown>
        <Unknown>
          Ascending
        </Unknown>
        <Unknown>
          Descending
        </Unknown>
      </Unknown>,
    ]
  }
  toggle={
    <Unknown>
      Options Menu
    </Unknown>
  }
>
  <div
    className="pf-c-options-menu"
    id="plain"
  >
    <Component
      isOpen={false}
      isPlain={true}
      key=".0"
      parentId="plain"
    >
      <button
        aria-expanded={false}
        aria-haspopup="listbox"
        aria-label="Options menu"
        className="pf-c-options-menu__toggle pf-m-plain"
        id="plain-toggle"
        onClick={[Function]}
      >
        <CaretDownIcon
          aria-hidden={true}
          className="pf-c-options-menu__toggle-icon"
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
          title={null}
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            className="pf-c-options-menu__toggle-icon"
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 320 512"
            width="1em"
          >
            <path
              d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
              transform=""
            />
          </svg>
        </CaretDownIcon>
      </button>
    </Component>
  </div>
</Component>
`;

exports[`optionsMenu regular 1`] = `
<Component
  id="regular"
  menuItems={
    Array [
      <Unknown>
        <Unknown>
          Name
        </Unknown>
        <Unknown>
          Date
        </Unknown>
        <Unknown
          isDisabled={true}
        >
          Disabled
        </Unknown>
        <Unknown>
          Size
        </Unknown>
      </Unknown>,
      <Unknown />,
      <Unknown>
        <Unknown>
          Ascending
        </Unknown>
        <Unknown>
          Descending
        </Unknown>
      </Unknown>,
    ]
  }
  toggle={
    <Unknown>
      Options Menu
    </Unknown>
  }
>
  <div
    className="pf-c-options-menu"
    id="regular"
  >
    <Component
      isOpen={false}
      isPlain={false}
      key=".0"
      parentId="regular"
    >
      <button
        aria-expanded={false}
        aria-haspopup="listbox"
        aria-label="Options menu"
        className="pf-c-options-menu__toggle"
        id="regular-toggle"
        onClick={[Function]}
      >
        <span
          className="pf-c-options-menu__toggle-text"
        />
        <CaretDownIcon
          aria-hidden={true}
          className="pf-c-options-menu__toggle-icon"
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
          title={null}
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            className="pf-c-options-menu__toggle-icon"
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 320 512"
            width="1em"
          >
            <path
              d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
              transform=""
            />
          </svg>
        </CaretDownIcon>
      </button>
    </Component>
  </div>
</Component>
`;

exports[`optionsMenu right aligned + open up 1`] = `
<Component
  direction="up"
  id="rightAlignedOpenUp"
  menuItems={
    Array [
      <Unknown>
        <Unknown>
          Name
        </Unknown>
        <Unknown>
          Date
        </Unknown>
        <Unknown
          isDisabled={true}
        >
          Disabled
        </Unknown>
        <Unknown>
          Size
        </Unknown>
      </Unknown>,
      <Unknown />,
      <Unknown>
        <Unknown>
          Ascending
        </Unknown>
        <Unknown>
          Descending
        </Unknown>
      </Unknown>,
    ]
  }
  position="right"
  toggle={
    <Unknown>
      Options Menu
    </Unknown>
  }
>
  <div
    className="pf-c-options-menu pf-m-top pf-m-align-right"
    id="rightAlignedOpenUp"
  >
    <Component
      isOpen={false}
      isPlain={false}
      key=".0"
      parentId="rightAlignedOpenUp"
    >
      <button
        aria-expanded={false}
        aria-haspopup="listbox"
        aria-label="Options menu"
        className="pf-c-options-menu__toggle"
        id="rightAlignedOpenUp-toggle"
        onClick={[Function]}
      >
        <span
          className="pf-c-options-menu__toggle-text"
        />
        <CaretDownIcon
          aria-hidden={true}
          className="pf-c-options-menu__toggle-icon"
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
          title={null}
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            className="pf-c-options-menu__toggle-icon"
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 320 512"
            width="1em"
          >
            <path
              d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
              transform=""
            />
          </svg>
        </CaretDownIcon>
      </button>
    </Component>
  </div>
</Component>
`;

exports[`optionsMenu right aligned 1`] = `
<Component
  id="rightAligned"
  menuItems={
    Array [
      <Unknown>
        <Unknown>
          Name
        </Unknown>
        <Unknown>
          Date
        </Unknown>
        <Unknown
          isDisabled={true}
        >
          Disabled
        </Unknown>
        <Unknown>
          Size
        </Unknown>
      </Unknown>,
      <Unknown />,
      <Unknown>
        <Unknown>
          Ascending
        </Unknown>
        <Unknown>
          Descending
        </Unknown>
      </Unknown>,
    ]
  }
  position="right"
  toggle={
    <Unknown>
      Options Menu
    </Unknown>
  }
>
  <div
    className="pf-c-options-menu pf-m-align-right"
    id="rightAligned"
  >
    <Component
      isOpen={false}
      isPlain={false}
      key=".0"
      parentId="rightAligned"
    >
      <button
        aria-expanded={false}
        aria-haspopup="listbox"
        aria-label="Options menu"
        className="pf-c-options-menu__toggle"
        id="rightAligned-toggle"
        onClick={[Function]}
      >
        <span
          className="pf-c-options-menu__toggle-text"
        />
        <CaretDownIcon
          aria-hidden={true}
          className="pf-c-options-menu__toggle-icon"
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
          title={null}
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            className="pf-c-options-menu__toggle-icon"
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 320 512"
            width="1em"
          >
            <path
              d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
              transform=""
            />
          </svg>
        </CaretDownIcon>
      </button>
    </Component>
  </div>
</Component>
`;

exports[`optionsMenu text 1`] = `
<Component
  id="text"
  menuItems={
    Array [
      <Unknown>
        <Unknown>
          Name
        </Unknown>
        <Unknown>
          Date
        </Unknown>
        <Unknown
          isDisabled={true}
        >
          Disabled
        </Unknown>
        <Unknown>
          Size
        </Unknown>
      </Unknown>,
      <Unknown />,
      <Unknown>
        <Unknown>
          Ascending
        </Unknown>
        <Unknown>
          Descending
        </Unknown>
      </Unknown>,
    ]
  }
  toggle={
    <Unknown
      toggleButtonContents={
        <React.Fragment>
          Test
        </React.Fragment>
      }
      toggleText="Test"
    />
  }
>
  <div
    className="pf-c-options-menu"
    id="text"
  >
    <Component
      isOpen={false}
      isPlain={false}
      key=".0"
      parentId="text"
      toggleButtonContents={
        <React.Fragment>
          Test
        </React.Fragment>
      }
      toggleText="Test"
    >
      <div
        className="pf-c-options-menu__toggle pf-m-text"
      >
        <span
          className="pf-c-options-menu__toggle-text"
        >
          Test
        </span>
        <button
          aria-expanded={false}
          aria-haspopup="listbox"
          aria-label="Options menu"
          className="pf-c-options-menu__toggle-button"
          id="text-toggle"
          onClick={[Function]}
        >
          Test
        </button>
      </div>
    </Component>
  </div>
</Component>
`;
